--- a/TCGA_steps_code.ipynb
+++ b/TCGA_steps_code.ipynb
@@ -5,24 +5,13 @@
    "metadata": {},
    "source": [
     "# Handling TCGA data\n",
-    "### Overall goals\n",
-    "- Work with TCGA data (e.g. of a specific study or primary site)\n",
-    "- Downoad data (or further data after a while)\n",
-    "- Only download data matching specific cases\n",
-    "\n",
-    "### Filtering and selecting TCGA data\n",
-    "- Filter and select TCGA data from the TCGA GDC data portal as explained in \"TCGA_steps_explained.ipynb\"\n",
-    "- Do these steps every time for your new analyses, also when you later on have new aspects or file types to consider\n",
+    "## Your input\n",
+    "- Filter and select TCGA data from the TCGA GDC data portal as explained in [\"TCGA_steps_explained.ipynb\"](TCGA_steps_explained.ipynb)\n",
+    "- Follow these steps every time for your new analyses, also when you have new aspects or file types to consider later on\n",
     "- Create a folder called \"sample_sheets\" in your analysis path, create the folders \"manifests\" and \"sample_sheets_prior\" in the \"sample_sheets\" folder\n",
+    "- Adapt the [\"data/config.yaml\"](data/config.yaml)\n",
     "\n",
-    "- Adapt the data/config.yaml"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Check validity of important configuration file entries"
+    "## Check validity of important configuration file entries"
    ]
   },
   {
@@ -94,9 +83,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Combine manifest with sample sheet, filter for relevant files\n",
-    "- Adapt the data/config.yaml\n",
-    "- manifest "
+    "## Combine manifest with sample sheet, filter for relevant files\n",
+    "\n",
+    "- Merge manifest and sample sheet\n",
+    "- If previous selection of case IDs -> filter for specific case IDs of previous analysis\n",
+    "- Create adapted filtered manifest file for gdc-client download"
    ]
   },
   {
@@ -116,8 +107,9 @@
     "analysis_path = config_file['analysis_path']\n",
     "\n",
     "# original (prior) manifest files, merge them\n",
-    "manifests = [pd.read_table(analysis_path+'sample_sheets/manifests/'+i) for i in config_file['manifests_prior']]\n",
-    "manifests_merge = pd.concat(manifests)\n",
+    "manifests = config_file['manifests_prior']\n",
+    "manifests_dfs = [pd.read_table(analysis_path+'sample_sheets/manifests/'+i) for i in manifests]\n",
+    "manifests_merge = pd.concat(manifests_dfs)\n",
     "\n",
     "# original (prior) sample sheets, merge them\n",
     "sample_sheets = [pd.read_table(analysis_path+'sample_sheets/sample_sheets_prior/'+i) for i in config_file['sample_sheets_prior']]\n",
@@ -144,11 +136,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "- merge manifest and sample sheet\n",
-    "- if previous selection of case IDs -> filter for specific case IDs of previous analysis\n",
-    "- create adapted filtered manifest file for gdc-client download"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -231,18 +219,20 @@
    "metadata": {},
    "source": [
     "### Download TCGA data via a manifest document and the GDC-client tool\n",
-    "- For restricted access files:\n",
+    "- This part creates a new conda environment called \"gdc_client\" and downloads the gdc-client tool\n",
+    "- Download of the TCGA data from manifest specified in previous steps and/or the configuration file via the gdc-client\n",
+    "- The files from the manifest are downloaded into the following folder: analysis_path + '00_raw_data'\n",
+    "\n",
+    "- Optional: for restricted access files:\n",
     "    - Login at NIH for restricted access files\n",
-    "    - Download access token, save as secured file\n",
-    "- Download gdc-client tool -> create conda environment named, also possible with this code here -> creates a conda environment called \"gdc_client\"\n",
-    "\n"
+    "    - Download access token, save as secured file"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- the files from the manifest are downloaded into the following folder: analysis_path + '00_raw_data'\n",
+    "- \n",
     "\n",
     "```\n",
     "gdc-client download -m manifest.txt -t user-token.txt\n",
