--- a/TCGA_steps_explained.ipynb
+++ b/TCGA_steps_explained.ipynb
@@ -5,17 +5,16 @@
    "metadata": {},
    "source": [
     "# Handling TCGA data\n",
-    "### Overall goals\n",
+    "## 1. Overall goals\n",
     "- Work with TCGA data (e.g. of a specific study or primary site)\n",
     "- Downoad data (or further data after a while)\n",
-    "- Only download data matching specific cases\n",
+    "- Download data matching specific cases from previous analyses\n",
     "\n",
-    "### Filtering and selecting TCGA data\n",
-    "- Go to: https://portal.gdc.cancer.gov/analysis_page\n",
+    "## 2. Your input\n",
+    "### 2.1. Filter and select TCGA data\n",
+    "- Go to: [https://portal.gdc.cancer.gov/analysis_page](https://portal.gdc.cancer.gov/analysis_page)\n",
     "- Click on \"Repository\"\n",
     "\n",
-    "<img src=\"figures/tcga_gdc_repository.png\" style=\"width:1000px; position: relative; left: 40px\">\n",
-    "<p></p>\n",
     "<img src=\"figures/tcga_gdc_repository_files.png\" style=\"width:1000px; position: relative; left: 40px\">\n",
     "\n",
     "- Filter by files:\n",
@@ -36,55 +35,72 @@
     "\n",
     "<img src=\"figures/tcga_gdc_cases_filter.png\" style=\"width:1000px; position: relative; left: 40px\">\n",
     "\n",
-    "- Select associated files or put all relevant data into the cart\n",
+    "- Select your files of interest or put all relevant data into the cart\n",
     "\n",
     "<img src=\"figures/tcga_gdc_select_file_cart.png\" style=\"width:800px; position: relative; left: 40px\">\n",
     "\n",
-    "- Click on the Cart symbol\n",
+    "- Click on the Cart symbol at the top to view the contents of the cart\n",
     "\n",
     "<img src=\"figures/tcga_gdc_cart_overview.png\" style=\"width:1000px; position: relative; left: 40px\">\n",
     "\n",
-    "- Download the Sample Sheet, Metadata, Clinical: TSV data for additional information\n",
+    "- Click on \"Download Associated Data\". Download the following files:\n",
+    "    - Sample Sheet\n",
+    "    - Metadata\n",
+    "    - Optional: Clinical: TSV data for additional information\n",
     "\n",
     "<img src=\"figures/tcga_gdc_cart_ass_data.png\" style=\"width:180px; position: relative; left: 40px\">\n",
     "\n",
-    "- Download the Manifest for a data download with the gdc-client tool\n",
+    "- Click on \"Download Cart\". Download the Manifest for a data download with the gdc-client tool\n",
     "\n",
     "<img src=\"figures/tcga_gdc_cart_manifest.png\" style=\"width:120px; position: relative; left: 40px\">\n",
     "\n",
-    "- Do these steps every time for your new analyses, also when you later on have new aspects or file types to consider\n",
+    "- Follow these steps every time for your new analyses, also when you have new aspects or file types to consider later on\n",
     "\n",
     "\n",
-    "### File locations for manifests and sample sheets\n",
-    "- Create an analysis folder and in this folder, a \"sample_sheets\" folder with sub-folders \"clinical_data\", \"manifests\", and \"sample_sheets_prior\"\n",
+    "### 2.2. File locations for manifests and sample sheets\n",
+    "- Create a local analysis folder and in this folder, a \"sample_sheets\" folder with sub-folders \"clinical_data\", \"manifests\", and \"sample_sheets_prior\"\n",
     "\n",
-    "<analysis_path>\n",
+    "&emsp;&emsp;&ensp;<analysis_path>\n",
     "\n",
-    "└── sample_sheets\n",
+    "&emsp;&emsp;&ensp;└── sample_sheets\n",
     "<br>\n",
-    "&emsp;&emsp;├── clinical_data\n",
+    "&emsp;&emsp;&emsp;&emsp;&ensp;├── clinical_data\n",
     "<br>\n",
-    "&emsp;&emsp;├── manifests\n",
+    "&emsp;&emsp;&emsp;&emsp;&ensp;├── manifests\n",
     "<br>\n",
-    "&emsp;&emsp;└── sample_sheets_prior    \n",
+    "&emsp;&emsp;&emsp;&emsp;&ensp;└── sample_sheets_prior    \n",
     "\n",
     "\n",
+    "### 2.3. Optional: Download TCGA access token for restricted access files\n",
+    "- For restricted access files:\n",
+    "    - Login at TCGA (with NIH account) for restricted access files\n",
+    "    - Download access token, save as secured file\n",
     "\n",
-    "### Combine manifest with sample sheet, filter for relevant files\n",
-    "- manifest file\n",
+    "\n",
+    "### 2.3. Adapt the configuration file\n",
+    "- The configuration file [\"data/config.yaml\"](data/config.yaml) encompasses \n",
+    "\n",
+    "\n",
+    "## 3. Pipeline steps explained\n",
+    "### 3.1. Combine manifest with sample sheet, filter for relevant files\n",
+    "- This is how a manifest file looks like:\n",
     "\n",
     "<img src=\"figures/tcga_manifest_file_example.png\" style=\"width:1000px; position: relative; left: 40px\">\n",
     "\n",
-    "- sample sheet\n",
+    "- This is how a sample sheet looks like:\n",
     "\n",
     "<img src=\"figures/tcga_sample_sheet_example.png\" style=\"width:1000px; position: relative; left: 40px\">\n",
     "\n",
-    "- merge manifest and sample sheet\n",
-    "- if previous selection of case IDs -> filter for specific case IDs of previous analysis\n",
+    "- Merge manifest and sample sheet\n",
+    "- If previous selection of case IDs wanted, filter for specific case IDs of previous analysis\n",
     "- create adapted filtered manifest file for gdc-client download\n",
     "\n",
-    "### Download TCGA data via a manifest document and the GDC-client tool\n",
-    "- For restricted access files:\n",
+    "### 3.2. Download TCGA data via a manifest document and the GDC-client tool\n",
+    "- The script creates a new conda environment called \"gdc_client\" and downloads the gdc-client tool. If you have already installed the gdc-client in a separete conda environment, you can specify that in the configuration file.\n",
+    "- The script downloads the TCGA data from manifest specified in previous steps and/or the configuration file via the gdc-client\n",
+    "- The files from the manifest are downloaded into the following folder: analysis_path + '00_raw_data'\n",
+    "\n",
+    "- Optional: for restricted access files:\n",
     "    - Login at NIH for restricted access files\n",
     "    - Download access token, save as secured file\n",
     "- Download gdc-client tool\n",
@@ -93,12 +109,12 @@
     "gdc-client download -m manifest.txt -t user-token.txt\n",
     "```\n",
     "\n",
-    "### Rename the downloaded files as case_id.file_suffix\n",
+    "### 3.3. Rename the downloaded files as case_id.file_suffix\n",
     "- in manifest only id, filename with 36 different characters\n",
     "- take merged manifest and sample sheet\n",
     "- rename downloaded files and put them in new folders for each analysis\n",
     "\n",
-    "### Analyze files\n",
+    "### 3.4. Analyze files\n",
     "- with Snakemake pipeline\n"
    ]
   },
@@ -106,29 +122,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "└── sample_sheets\n",
-      "    ├── clinical_data\n",
-      "    ├── manifests\n",
-      "    └── sample_sheets_prior\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('└── sample_sheets')\n",
-    "print('    ├── clinical_data')\n",
-    "print('    ├── manifests')\n",
-    "print('    └── sample_sheets_prior')"
-   ]
   },
   {
    "cell_type": "markdown",
