readme, code adapt

--- a/TCGA_steps_code.ipynb
+++ b/TCGA_steps_code.ipynb
@@ -11,7 +11,7 @@
     "- Create a folder called \"sample_sheets\" in your analysis path, create the folders \"manifests\" and \"sample_sheets_prior\" in the \"sample_sheets\" folder\n",
     "- Adapt the [\"data/config.yaml\"](data/config.yaml)\n",
     "\n",
-    "## Check validity of important configuration file entries"
+    "## Check validity of configuration file entries"
    ]
   },
   {
@@ -87,7 +87,7 @@
     "\n",
     "- Merge manifest and sample sheet\n",
     "- If previous selection of case IDs -> filter for specific case IDs of previous analysis\n",
-    "- Create adapted filtered manifest file for gdc-client download"
+    "- Create adapted filtered manifest files for gdc-client download, rename them with the suffix \"_ready.txt\""
    ]
   },
   {
@@ -109,7 +109,6 @@
     "# original (prior) manifest files, merge them\n",
     "manifests = config_file['manifests_prior']\n",
     "manifests_dfs = [pd.read_table(analysis_path+'sample_sheets/manifests/'+i) for i in manifests]\n",
-    "manifests_merge = pd.concat(manifests_dfs)\n",
     "\n",
     "# original (prior) sample sheets, merge them\n",
     "sample_sheets = [pd.read_table(analysis_path+'sample_sheets/sample_sheets_prior/'+i) for i in config_file['sample_sheets_prior']]\n",
@@ -123,75 +122,17 @@
     "if sample_sheet_filtering != False:\n",
     "    sample_sheet_filter = pd.read_table(analysis_path+'sample_sheets/'+sample_sheet_filtering)\n",
     "    case_ids = list(sample_sheet_filter['Case ID'].unique())\n",
-    "    filtered_manifest = manifests_merge[(manifests_merge['Case ID'].isin(case_ids))&(manifests_merge['Sample Type']=='Primary Tumor')].copy().reset_index(drop=True)\n",
+    "    for manifest, file_name_manifest in zip(manifests_dfs, manifests):\n",
+    "        filtered_manifest = manifest[(manifest['Case ID'].isin(case_ids))&(manifest['Sample Type']=='Primary Tumor')].copy()\n",
+    "        filtered_manifest.to_csv((analysis_path+'sample_sheets/manifests/'+manifest[0]+'_ready'+'.txt'), sep='\\t', index=False)\n",
+    "else:\n",
+    "    for manifest, file_name_manifest in zip(manifests_dfs, manifests):\n",
+    "        manifest.to_csv((analysis_path+'sample_sheets/manifests/'+manifest[0]+'_ready'+'.txt'), sep='\\t', index=False)\n",
     "\n",
-    "    filtered_manifest.to_csv(analysis_path+'sample_sheets/manifests/'+manifest)\n",
     "\n",
+    "# change config.yaml \"manifest_for_download\" with manifests file name rsplit('.',1)[0] + _ready + manifests file name rsplit('.',1)[0]\n",
     "\n",
-    "\n",
-    "\n",
-    "star_counts_sample_sheet.to_csv('sample_sheets/sample_sheets_prior/2024-04-08_gdc_sample_sheet_star_counts_lusc.tsv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Rename the downloaded files as case_id.file_suffix\n",
-    "- in manifest only id, filename with 36 different characters\n",
-    "- take merged manifest and sample sheet\n",
-    "- rename downloaded files and put them in new folders for each analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# categorize samples for their analysis method\n",
-    "method_dict = {'BRASS':'BRASS', 'CaVEMan':'CaVEMan', 'ASCAT':'CNV_segment', 'pindel':'Pindel', 'star_splice':'Splicing', \n",
-    "               'star_gene_counts':'STAR_counts'}\n",
-    "\n",
-    "sample_sheets_merge['Folder'] = ''\n",
-    "\n",
-    "for met in method_dict.keys():\n",
-    "    sample_sheets_merge.loc[sample_sheets_merge['File Name'].str.contains(met), 'Folder'] = method_dict[met]\n",
-    "\n",
-    "# 36 characters file ID\n",
-    "sample_sheets_merge['File Suffix'] = sample_sheets_merge['File Name'].str[36:]\n",
-    "\n",
-    "sample_sheets_merge['Path_raw'] = analysis_path+'00_raw_data/'+sample_sheets_merge['File ID']+'/'+sample_sheets_merge['File Name']\n",
-    "sample_sheets_merge['Path_sample'] = analysis_path+'01_sample_data/'+sample_sheets_merge['Folder']+'/'+sample_sheets_merge['Case ID']+sample_sheets_merge['File Suffix']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "manifests_pipeline_files = []"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Manifest for download"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# manifests for download\n",
     "import shlex\n",
     "import subprocess\n",
     "import yaml\n",
@@ -206,13 +147,6 @@
     "    manifest_file_change_cmd = f\"sed -i 's/^manifest_for_download: .*/manifest_for_download: [{manifests_pipeline}]/' data/config.yaml\"\n",
     "    subprocess.run(shlex.split(manifest_file_change_cmd))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -356,7 +290,9 @@
    "metadata": {},
    "source": [
     "### Rename file names with symlinks\n",
-    "\n"
+    "- In manifest only id, filename with 36 different characters\n",
+    "- Merge manifest and sample sheet, create new names \n",
+    "- Rename downloaded files and put them in new folders for each analysis\n"
    ]
   },
   {
@@ -376,8 +312,29 @@
     "os.makedirs(analysis_path+'01_sample_data', exist_ok=True)\n",
     "\n",
     "downloaded_manifests = config_file['manifest_for_download']\n",
-    "downloaded_manifests = pd.concat([pd.read_table(analysis_path+'sample_sheets/manifests/'+i) for i in downloaded_manifests])\n",
+    "downloaded_manifests = pd.concat([pd.read_table(analysis_path+'sample_sheets/manifests/'+i.rsplit('.', 1)[0]+'_ready'+i.rsplit('.', 1)[1]) for i in downloaded_manifests])\n",
     "downloaded_manifests = downloaded_manifests.rename(columns={'id':'File ID', 'filename':'File Name'})\n",
+    "\n",
+    "# original (prior) sample sheets, merge them\n",
+    "sample_sheets = [pd.read_table(analysis_path+'sample_sheets/sample_sheets_prior/'+i) for i in config_file['sample_sheets_prior']]\n",
+    "sample_sheets_merge = pd.concat(sample_sheets)\n",
+    "\n",
+    "sample_sheets_merge['Case ID'] = sample_sheets_merge['Case ID'].str.split(', ', expand=True)[0]\n",
+    "\n",
+    "# categorize samples for their analysis method\n",
+    "method_dict = {'BRASS':'BRASS', 'CaVEMan':'CaVEMan', 'ASCAT':'CNV_segment', 'pindel':'Pindel', 'star_splice':'Splicing', \n",
+    "               'star_gene_counts':'STAR_counts'}\n",
+    "\n",
+    "sample_sheets_merge['Folder'] = ''\n",
+    "\n",
+    "for met in method_dict.keys():\n",
+    "    sample_sheets_merge.loc[sample_sheets_merge['File Name'].str.contains(met), 'Folder'] = method_dict[met]\n",
+    "\n",
+    "# 36 characters file ID\n",
+    "sample_sheets_merge['File Suffix'] = sample_sheets_merge['File Name'].str[36:]\n",
+    "\n",
+    "sample_sheets_merge['Path_raw'] = analysis_path+'00_raw_data/'+sample_sheets_merge['File ID']+'/'+sample_sheets_merge['File Name']\n",
+    "sample_sheets_merge['Path_sample'] = analysis_path+'01_sample_data/'+sample_sheets_merge['Folder']+'/'+sample_sheets_merge['Case ID']+sample_sheets_merge['File Suffix']\n",
     "\n",
     "# merge with executed manifest file(s) on executed manifest files\n",
     "downloaded_manifests = downloaded_manifests.merge(sample_sheets_merge, how='left', on=['File ID', 'File Name'])\n",
