--- a/TCGA_steps_code.ipynb
+++ b/TCGA_steps_code.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,8 +322,7 @@
     "sample_sheets_merge['Case ID'] = sample_sheets_merge['Case ID'].str.split(', ', expand=True)[0]\n",
     "\n",
     "# categorize samples for their analysis method\n",
-    "method_dict = {'BRASS':'BRASS', 'CaVEMan':'CaVEMan', 'ASCAT':'CNV_segment', 'pindel':'Pindel', 'star_splice':'Splicing', \n",
-    "               'star_gene_counts':'STAR_counts'}\n",
+    "method_dict = config_file['methods_dict']\n",
     "\n",
     "sample_sheets_merge['Folder'] = ''\n",
     "\n",
@@ -401,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
