--- a/TCGA_steps_code.ipynb
+++ b/TCGA_steps_code.ipynb
@@ -92,12 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import yaml\n",
+    "import shlex\n",
+    "import subprocess\n",
     "\n",
     "# load config file\n",
     "with open('data/config.yaml', 'r') as streamfile:\n",
@@ -106,9 +108,13 @@
     "# analysis path\n",
     "analysis_path = config_file['analysis_path']\n",
     "\n",
-    "# original (prior) manifest files, merge them\n",
+    "# original (prior) manifest files\n",
     "manifests = config_file['manifests_prior']\n",
     "manifests_dfs = [pd.read_table(analysis_path+'sample_sheets/manifests/'+i) for i in manifests]\n",
+    "\n",
+    "# create folder for downloadable manifest files and merged with sample sheet\n",
+    "os.makedirs(analysis_path+'sample_sheets/manifests_for_download', exist_ok=True)\n",
+    "os.makedirs(analysis_path+'sample_sheets/manifests_merged_sample_sheet', exist_ok=True)\n",
     "\n",
     "# original (prior) sample sheets, merge them\n",
     "sample_sheets = [pd.read_table(analysis_path+'sample_sheets/sample_sheets_prior/'+i) for i in config_file['sample_sheets_prior']]\n",
@@ -116,32 +122,39 @@
     "\n",
     "sample_sheets_merge['Case ID'] = sample_sheets_merge['Case ID'].str.split(', ', expand=True)[0]\n",
     "\n",
+    "# merge each manifest file with the sample sheet\n",
+    "merge_manifest_sample_sheet = [pd.merge(manifest, sample_sheets_merge, how='left', left_on=['id','filename'], right_on=['File ID','File Name']) for manifest in manifests_dfs]\n",
+    "\n",
     "# if filtering of manifest file on case IDs of previous sample sheet is wanted\n",
     "sample_sheet_filtering = config_file['sample_sheet_filtering']\n",
     "\n",
     "if sample_sheet_filtering != False:\n",
     "    sample_sheet_filter = pd.read_table(analysis_path+'sample_sheets/'+sample_sheet_filtering)\n",
     "    case_ids = list(sample_sheet_filter['Case ID'].unique())\n",
-    "    for manifest, file_name_manifest in zip(manifests_dfs, manifests):\n",
+    "    list_manifests_for_download = []\n",
+    "    for manifest, file_name_manifest in zip(merge_manifest_sample_sheet, manifests):\n",
+    "        filtered_manifest = pd.merge()\n",
     "        filtered_manifest = manifest[(manifest['Case ID'].isin(case_ids))&(manifest['Sample Type']=='Primary Tumor')].copy()\n",
-    "        filtered_manifest.to_csv((analysis_path+'sample_sheets/manifests/'+manifest[0]+'_ready'+'.txt'), sep='\\t', index=False)\n",
+    "        filtered_manifest_name = analysis_path+'sample_sheets/manifests_for_download/'+file_name_manifest+'_ready'+'.txt'\n",
+    "        list_manifests_for_download.append(filtered_manifest_name)\n",
+    "        filtered_manifest[['id','filename','md5','size','state']].to_csv(filtered_manifest_name, sep='\\t', index=False)\n",
+    "        filtered_manifest.to_csv(analysis_path+'sample_sheets/manifests_merged_sample_sheet/'+file_name_manifest+'_merged_sample_sheet'+'.txt', sep='\\t', index=False)\n",
     "else:\n",
-    "    for manifest, file_name_manifest in zip(manifests_dfs, manifests):\n",
-    "        manifest.to_csv((analysis_path+'sample_sheets/manifests/'+manifest[0]+'_ready'+'.txt'), sep='\\t', index=False)\n",
-    "\n",
-    "\n",
-    "# change config.yaml \"manifest_for_download\" with manifests file name rsplit('.',1)[0] + _ready + manifests file name rsplit('.',1)[0]\n",
+    "    list_manifests_for_download = []\n",
+    "    for manifest, file_name_manifest in zip(merge_manifest_sample_sheet, manifests):\n",
+    "        manifest_name = analysis_path+'sample_sheets/manifests_for_download/'+file_name_manifest+'_ready'+'.txt'\n",
+    "        list_manifests_for_download.append(manifest_name)\n",
+    "        manifest[['id','filename','md5','size','state']].to_csv(manifest_name, sep='\\t', index=False)\n",
+    "        manifest.to_csv(analysis_path+'sample_sheets/manifests_merged_sample_sheet/'+file_name_manifest+'_merged_sample_sheet'+'.txt', sep='\\t', index=False)\n",
     "\n",
     "# manifests for download\n",
-    "import shlex\n",
-    "import subprocess\n",
-    "import yaml\n",
-    "\n",
+    "# read in configuration file again because it was changed the prior step\n",
     "with open('data/config.yaml', 'r') as streamfile:\n",
     "    config_file = yaml.load(streamfile, Loader=yaml.FullLoader)\n",
     "\n",
     "# filtered manifest(s) in there, but only names in 'sample_sheets/manifests/\n",
     "if config_file['manifest_for_download'] == False:\n",
+    "    manifests_pipeline_files = [m.split('/')[-1] for m in list_manifests_for_download]\n",
     "    manifests_pipeline = ', '.join(manifests_pipeline_files) # only file names\n",
     "    \n",
     "    manifest_file_change_cmd = f\"sed -i 's/^manifest_for_download: .*/manifest_for_download: [{manifests_pipeline}]/' data/config.yaml\"\n",
@@ -212,6 +225,7 @@
     "\n",
     "    manifest_for_download = []\n",
     "\n",
+    "    # better: check if case ID file in 01_sample\n",
     "    if manifest_for_download_prior != False:\n",
     "        for manifest_file in manifest_for_download_prior:\n",
     "            manifest = pd.read_table(manifest_file).drop_duplicates()\n",
@@ -311,8 +325,9 @@
     "analysis_path = config_file['analysis_path']\n",
     "os.makedirs(analysis_path+'01_sample_data', exist_ok=True)\n",
     "\n",
+    "### work with already existing merged files in folder 'manifests_merged_sample_sheet'\n",
     "downloaded_manifests = config_file['manifest_for_download']\n",
-    "downloaded_manifests = pd.concat([pd.read_table(analysis_path+'sample_sheets/manifests/'+i.rsplit('.', 1)[0]+'_ready'+i.rsplit('.', 1)[1]) for i in downloaded_manifests])\n",
+    "downloaded_manifests = pd.concat([pd.read_table(analysis_path+'sample_sheets/manifests_merged_sample_sheet/'+i) for i in downloaded_manifests])\n",
     "downloaded_manifests = downloaded_manifests.rename(columns={'id':'File ID', 'filename':'File Name'})\n",
     "\n",
     "# original (prior) sample sheets, merge them\n",
